--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h1 id="myname"> <a href="index.html">ALEXANDRA DEBARTOLO</a>
     </h1>
     <div class="topnav">
-      <!-- <a class="active" href="#home">Home</a> -->
       <a href="https://www.behance.net/adebartolo" target="_blank">Portfolio</a>
       <a href="https://drive.google.com/file/d/0B6qx46718LR_RW43LWQzNkp0b0psM2hvY0I2SmphU1Z6ZTM0/view?usp=sharing">Resume</a>
+      <a href="https://github.com/adebartolo/ctw">Github</a>
       <a href="mailto:amdebartolo@gmail.com">Contact</a>
     </div>
     <br>
