--- a/index.html
+++ b/index.html
@@ -1,29 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Hello!</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
-  </head>
-  <body>
-    <h1 id="myname"> <a href="index.html">ALEXANDRA DEBARTOLO</a>
-    </h1>
-    <div class="topnav">
-      <a href="https://www.behance.net/adebartolo" target="_blank">Portfolio</a>
-      <a href="https://drive.google.com/file/d/0B6qx46718LR_RW43LWQzNkp0b0psM2hvY0I2SmphU1Z6ZTM0/view?usp=sharing">Resume</a>
-      <a href="https://github.com/adebartolo/ctw">Github</a>
-      <a href="mailto:amdebartolo@gmail.com">Contact</a>
-    </div>
-    <br>
-    <div class="row">
-      <div class="about">
-        Alexandra is a student at Baruch College who is studying Computer Information Systems with a track in data analytics. She loves to read, code, and explore new places. She is interested in artificial intelligence, promoting STEM education, and enhancing environmental efforts.
-      </div>
-    </div>
-  </body>
-</html>
+/* CSS files add styling rules to your content */
+/* Add a black background color to the top navigation */
+.topnav {
+  overflow: hidden;
+}
+/* Style the links inside the navigation bar */
+.topnav a {
+  color: black;
+  text-align: center;
+  width: auto;
+  font-size: 20px;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+.topnav {
+  color: black;
+  text-align: center;
+  width: auto;
+  font-size: 20px;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+/* Change the color of links on hover */
+.topnav a:hover {
+  font-weight: bold;
+  color: black;
+}
+/* Add a color to the active/current link */
+.topnav a.active {
+  color: black;
+}
+body {
+  font-family: "arial";
+  /* margin: 2em; */
+  margin: 45px;
+}
+#myname {
+  text-align: center;
+  font-size: 45px;
+  color: black;
+  text-decoration: none;
+}
+#p1 {
+  color: black;
+}
+.about {
+  color: black;
+  text-align: center;
+  text-justify: hyphens;
+  width: auto;
+  font-size: 25px;
+  padding-top: 2%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+/* Clear floats after the columns */
+a {
+  text-decoration: none;
+  color: black;
+}
