--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="about">
         Alexandra is a student at Baruch College who is studying Computer Information Systems with a track in data analytics. She loves to read, code, and explore new places. She is interested in artificial intelligence, promoting STEM education, and enhancing environmental efforts.
       </div>
+      <img src="https://cdn.glitch.com/61326b34-5594-45d2-ad12-ecb35c97399a%2Fdocubot.gif?v=1574754082456" alt="Oops!" class="center">
     </div>
   </body>
 </html>
- 
