--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="topnav">
       <a href="https://www.behance.net/adebartolo" target="_blank">Portfolio</a>
       <a href="https://drive.google.com/file/d/0B6qx46718LR_RW43LWQzNkp0b0psM2hvY0I2SmphU1Z6ZTM0/view?usp=sharing" target="_blank">Resume</a>
-      <a href="https://github.com/adebartolo/" target="_blank">Github</a>
+      <a href="https://github.com/adebartolo/" target="_blank">GitHub</a>
       <a href="mailto:amdebartolo@gmail.com">Contact</a>
     </div>
     <br>
